# MLB-Trajectory-Calculator

./: .gitignore  Pipfile  README.md  pyproject.toml
mlbtc/: coordinates.py
mlbtc/calculator/: base_units.py  constants.py  dimensions.py  environment.py  trajectory.py  units.py
mlbtc/tests/test_calculator/: test_base_units.py  test_constants.py  test_dimensions.py  test_environment.py  test_trajectory.py  test_units.py
mlbtc/trajectory/: drag.py  environment.py  projectile.py
